Corrected alignment

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -6,18 +6,19 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  padding: 0px;
 }
 
 .card-product img {
   height: 100%;
   width: 150px;
   object-fit: cover;
+  margin: 0;
 }
 
 .card-product h2 {
   font-size: 16px;
   font-weight: bold;
-  margin: 0;
 }
 
 .card-product p {
@@ -43,6 +44,7 @@
   height: 200px;
   width: 100%;
   object-fit: cover;
+  margin: 0;
 }
 
 .card-trip h2 {
